test/language/module/compile_error/compile_error.wren
System.print("before") // expect: before
use "module" for Module // expect runtime error: Could not compile module 'test/language/module/compile_error/module'.
